--- a/catalog/view/theme/panbus/stylesheet/stylesheet.css
+++ b/catalog/view/theme/panbus/stylesheet/stylesheet.css
@@ -2736,3 +2736,52 @@ h2.price {
             transform: scale3D(0, 0, 1);
   } 
 }
+
+/* -----------Spiner Search------------ */
+
+.search-item__spiner {
+    position: absolute;
+    top: 0px;
+    right: 5px;    
+}
+
+.search-item__spiner-wherefrom, .search-item__spiner-from {
+    display: none;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 40px;
+  height:40px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  margin: 6px;
+  border: 10px solid #c3c3c3;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 1, 0.5, 0.9) infinite;
+  border-color: #c3c3c3 transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
