--- a/adm_pan/view/stylesheet/stylesheet.css
+++ b/adm_pan/view/stylesheet/stylesheet.css
@@ -665,3 +665,11 @@ div.ckeditor {
 .passengers-count span {
 	font-weight: bold;
 }
+
+.table-hover > tbody > tr:hover {
+	background-color: #f0f8ff !important;
+}
+
+#form-order .table tbody tr:nth-child(even){
+	background-color: #f5f5f5;
+}
