--- a/adm_pan/view/stylesheet/stylesheet.css
+++ b/adm_pan/view/stylesheet/stylesheet.css
@@ -472,9 +472,9 @@ input[type="checkbox"]:checked::after, .checkbox input[type="checkbox"]:checked:
     margin-bottom: 0;
 }
 
-.form-group + .form-group {
+/*.form-group + .form-group {
     border-top: 1px solid #ededed;
-}
+}*/
 /* Panels */
 .panel {
 	border-radius: 0px;
@@ -672,4 +672,43 @@ div.ckeditor {
 
 #form-order .table tbody tr:nth-child(even){
 	background-color: #f5f5f5;
+}
+
+.additional-filters {
+	margin-top: 30px;
+}
+
+.additional-filters__show {
+	margin: 0 15px;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+}
+
+.additional-filters__show-text {
+	position: relative;
+	display: inline-block;
+	vertical-align: top;
+	font-size: 14px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.additional-filters__show-text i {
+    position: relative;
+    top: 13px;
+    font-size: 24px;
+    background-color: whitesmoke;
+    padding: 0 2px 0 2px;
+    cursor: pointer;
+}
+
+.additional-filters__more{
+	max-height: 0px;
+	overflow: hidden;
+	transition: max-height 0.15s ease-out;
+}
+
+.additional-filters__more.active{
+	max-height: 1000px;
+	transition: max-height 0.25s ease-in;
 }
